--- a/AulaFullStackFront/index.html
+++ b/AulaFullStackFront/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastro de Usuarios</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,13 +11,17 @@
         <img src="./img/Logo.png" alt="Logo da empresa">
         <h2>Cadastro de Usuarios</h2>
 
-        <form id="cadastroForm" action="">
+        <form id="cadastroForm">
+
+            <input type="text" name="nome" id="nome" placeholder="Nome" required>
             <input type="email" name="email" id="email" placeholder="Email" required>
             <input type="password" name="senha" id="senha" placeholder="Senha" required>
-            <button type="button" onclick="cadastrarusuario()">Cadastrar</button>
+            <button type="button" onclick="cadastrarUsuario()">Cadastrar</button>
         </form>
+
+        <a href="./Usuario/usuarios.html" class="link-usuarios">Ver usuarios cadastrados</a>
     </div>
-    <div id="mensagem" class="mensagem-oculto" onclick="fecharMensagem()"></div>
+    <div id="mensagem" class="mensagem oculto" onclick="fecharMensagem()"></div>
 
     <script src="script.js"></script>
 </body>
